--- a/archive/scratchpad/v3_drills/box-model-margin-drills_complete/css/drill.css
+++ b/archive/scratchpad/v3_drills/box-model-margin-drills_complete/css/drill.css
@@ -1,36 +1,56 @@
 /* Drill 1 - Write your code solution below */
-#t8_box1 {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    /* margin: 50px 0px 50px 0px; */
+#d1-div1 {
+    margin-bottom: 24px;
 }
 
 /* Drill 2 - Write your code solution below */
-#t9_box1 {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-left: 50px;
-    /* margin: 50px 0px 50px 50px; */
-    /* margin: 50px; */
+#d2-div2 {
+    margin: 24px 0px;
 }
 
 /* Drill 3 - Write your code solution below */
-#t10_box5 {
-    margin-left: 150px;
+#d3-div1 {
+    margin-bottom: 24px;
 }
 
 /* Drill 4 - Write your code solution below */
-#t11_box5 {
-    margin-top: 150px;
+#d4-div2 {
+    margin: 24px 0px;
 }
 
 /* Drill 5 - Write your code solution below */
-#t12_box2 {
-    margin-left: auto;
-    margin-right: auto;
+
+#d5-div1 {
+    text-align: center
+}
+
+#d5-h5-1 {
+    margin-bottom: 0px;
+}
+
+#d5-h1-1 {
+    margin: 0px;
+}
+
+#d5-h2-1 {
+    margin-top: 8px;
 }
 
 /* Drill 6 - Write your code solution below */
-#t13_box3 {
-    margin-left: auto;
+.d6-div {
+    margin-right: 48px;
+}
+
+/* Drill 7 - Write your code solution below */
+#d7-container {
+    text-align: center;
+}
+
+.d7-div {
+    margin: 12px 24px;
+}
+
+/* Drill 7 - Write your code solution below */
+#d8-div1 {
+    margin: 12px auto;
 }
