--- a/archive/scratchpad/v3_drills/box-model-margin-drills_complete/css/drill.css
+++ b/archive/scratchpad/v3_drills/box-model-margin-drills_complete/css/drill.css
@@ -50,7 +50,32 @@
     margin: 12px 24px;
 }
 
-/* Drill 7 - Write your code solution below */
+/* Drill 8 - Write your code solution below */
 #d8-div1 {
     margin: 12px auto;
+}
+
+/* Drill 9 - Write your code solution below */
+#d9-div1 {
+    width: 250px;
+    margin: 0px auto;
+}
+
+/* Drill 10 - Write your code solution below */
+#d10-navbar-1 {
+    text-align: center;
+}
+
+.d10-navitem {
+    display: inline-block;
+    margin: 0px 16px;
+}
+
+#d10-div1 {
+    width: 250px;
+    margin: 0px auto;
+}
+
+#d10-h3-1 {
+    text-align: center;
 }
