--- a/cookbook/seasonings/css/shared.css
+++ b/cookbook/seasonings/css/shared.css
@@ -3,10 +3,8 @@ body {
 }
 
 .recipe-example {
-    
     border: 5px solid #1a3159;
-    border-width: 5px 0px;
-    border-radius: 0px;
+    border-width: 0px 0px 5px 0px;
     padding: 24px 0px;
 }
 
