--- a/archive/scratchpad/v3_drills/box-model-border-drills/css/drill.css
+++ b/archive/scratchpad/v3_drills/box-model-border-drills/css/drill.css
@@ -7,8 +7,18 @@
 /* Drill 3 - Write your code solution below */
 
 
+
 /* Drill 4 - Write your code solution below */
 
 
+
 /* Drill 5 - Write your code solution below */
+
+
+
+/* Drill 6 - Write your code solution below */
+
+
+
+/* Drill 7 - Write your code solution below */
 
