--- a/archive/scratchpad/v3_drills/box-model-padding-drills_complete/css/drill.css
+++ b/archive/scratchpad/v3_drills/box-model-padding-drills_complete/css/drill.css
@@ -1,22 +1,43 @@
 /* Drill 1 - Write your code solution below */
-#t4_container {
-    padding-left: 100px;
+
+#d1-container-1 {
+    padding: 36px;
 }
 
 /* Drill 2 - Write your code solution below */
-#t5_container {
-    /* padding: 0px 100px 0px 0px; */
-    padding-right: 100px;
+
+#d2-container-1 {
+    padding: 48px 24px;
 }
 
 /* Drill 3 - Write your code solution below */
-#t6_container {
-    padding-top: 100px;
+
+#d3-div-1,
+#d3-div-3 {
+    padding: 12px;
+}
+
+#d3-div-2 {
+    padding: 12px 48px;
 }
 
 /* Drill 4 - Write your code solution below */
-#t7_container {
-    padding-top: 100px;
-    padding-left: 100px;
-    /* padding: 100px 0px 0px 100px; */
+
+#d4-container-1 {
+    padding: 24px;
+}
+
+#d4-div-2 {
+    padding-top: 24px;
+}
+
+/* Drill 5 - Write your code solution below */
+
+#d5-container-1 {
+    text-align: center;
+}
+
+.d5-s {
+    display: inline-block;
+    padding: 24px;
 }
