--- a/cookbook/css/cookbook.css
+++ b/cookbook/css/cookbook.css
@@ -414,34 +414,41 @@ nav {
     background-color:#e5614466;
 }
 
-/* Seasonings Page special styling */
+/* Seasonings/Meal-Prep Page special styling */
 
-.seasonings .recipeDetails #cookbookPageColumnOne {
+.seasonings .recipeDetails #cookbookPageColumnOne,
+#meal-prep .recipeDetails #cookbookPageColumnOne {
     display: flex;
     flex-direction: column;
 }
 
-.seasonings .recipeDetails #recipeDetailsHeadingHTML {
+.seasonings .recipeDetails #recipeDetailsHeadingHTML,
+#meal-prep .recipeDetails #recipeDetailsHeadingHTML {
     margin-top: 16px;
 }
 
-.seasonings .recipeDetails #recipeDetailsHeadingCSS {
+.seasonings .recipeDetails #recipeDetailsHeadingCSS,
+#meal-prep .recipeDetails #recipeDetailsHeadingCSS {
     margin-top: 0px;
 }
 
-.seasonings .recipeDetails #recipeDetailsHeadingCSS {
+.seasonings .recipeDetails #recipeDetailsHeadingCSS,
+#meal-prep .recipeDetails #recipeDetailsHeadingCSS {
     order: 1;
 }
 
-.seasonings .recipeDetails #cssPreview {
+.seasonings .recipeDetails #cssPreview,
+#meal-prep .recipeDetails #cssPreview {
     order: 2;
 }
 
-.seasonings .recipeDetails #recipeDetailsHeadingHTML {
+.seasonings .recipeDetails #recipeDetailsHeadingHTML,
+#meal-prep .recipeDetails #recipeDetailsHeadingHTML {
     order: 3;
 }
 
-.seasonings .recipeDetails #htmlPreview {
+.seasonings .recipeDetails #htmlPreview,
+#meal-prep .recipeDetails #htmlPreview {
     order: 4;
 }
 
