adding border-radius to box model demo

--- a/cookbook/meal-prep/box-model/css/page9.css
+++ b/cookbook/meal-prep/box-model/css/page9.css
@@ -6,7 +6,7 @@ div {
 }
 
 /*
-    The last point we want to reinforce is that
+    Another point we want to reinforce is that
     this Box Model applies to EVERY HTML element,
     not just div elements.
 
