added client in

--- a/cookbook/meal-prep/combining-selectors/css/page2.css
+++ b/cookbook/meal-prep/combining-selectors/css/page2.css
@@ -1,6 +1,7 @@
 /*
-    Now, suppose want want to build
-    a simple navbar with a blue background.
+    Now, suppose we have a client who wants
+    us to build a simple navbar with a blue 
+    background.
 
     Let's go ahead and target the navbar id,
     and center the text, add some padding,
