--- a/cookbook/meal-prep/box-model/css/page10.css
+++ b/cookbook/meal-prep/box-model/css/page10.css
@@ -22,6 +22,7 @@ div {
 */
 
 p {
+    /* removed the border property here */
     margin: 60px;
     padding: 48px 60px;
     background-color: cornflowerblue;
