missing meal prep config for palettes

--- a/cookbook/meal-prep/color-palettes/css/style.css
+++ b/cookbook/meal-prep/color-palettes/css/style.css
@@ -1,3 +1,32 @@
+/*
+    This CSS is INCREDIBLY repetitive.
+
+    Using commas to share common properties 
+    across multiple sets of selectors would
+    greatly simplify this code.
+
+    However, since this is only their first 
+    day with CSS, we're only focusing on ID 
+    selectors at the moment, so we don't 
+    overwhelm them with new syntax variations.
+    
+    You probably only really need to demo one 
+    color palette; after that, they should be 
+    able to "rinse and repeat" from there.
+
+    That said, be sure to call out adding
+    padding: 24px;
+
+    We haven't taught them about padding yet,
+    but it's necessary to get the color blocks
+    to meet without gaps between them.
+
+    You can tell students that, and if they ask
+    why, ask them to wait until the next day of 
+    class, because we'll be going over padding 
+    (and other related properties) in depth.
+*/
+
 #style-1-heading {
     font-family: cursive;
     text-align: center;
@@ -8,7 +37,7 @@
     color: white;
     font-family: cursive;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-1-block-2 {
@@ -16,7 +45,7 @@
     color: black;
     font-family: cursive;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-1-block-3 {
@@ -24,7 +53,7 @@
     color: black;
     font-family: cursive;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-2-heading {
@@ -37,7 +66,7 @@
     color: white;
     font-family: sans-serif;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-2-block-2 {
@@ -45,7 +74,7 @@
     color: white;
     font-family: sans-serif;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-2-block-3 {
@@ -53,7 +82,7 @@
     color: black;
     font-family: sans-serif;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-2-block-4 {
@@ -61,7 +90,7 @@
     color: white;
     font-family: sans-serif;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-2-block-5 {
@@ -69,7 +98,7 @@
     color: black;
     font-family: sans-serif;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-3-heading {
@@ -82,7 +111,7 @@
     color: black;
     font-family: serif;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-3-block-2 {
@@ -90,7 +119,7 @@
     color: white;
     font-family: serif;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
 
 #style-3-block-3 {
@@ -98,5 +127,5 @@
     color: white;
     font-family: serif;
     text-align: center;
-    padding: 24px;
+    padding: 24px; /* not taught yet, but required */
 }
