--- a/cookbook/meal-prep/bulletin-board/css/simple.css
+++ b/cookbook/meal-prep/bulletin-board/css/simple.css
@@ -39,6 +39,13 @@
 
     margin: 24px;
     padding: 24p;
+
+    By the way, if you're curious why the post-its 
+    seem unaligned in each row, it's because inline
+    and inline-block content is aligned via the 
+    baseline of the content.  So the bottom line
+    of content of each post-it is what's aligned, 
+    shifting each post-it accordingly vertically.
 */
 
 /*
