--- a/archive/scratchpad/v3_projects/upside-down-tetris_fancy/css/style.css
+++ b/archive/scratchpad/v3_projects/upside-down-tetris_fancy/css/style.css
@@ -7,7 +7,7 @@
     Good luck, and have fun!
 */
 
-.block {
+.tetris-block {
     padding: 20px;
     border-width: 10px;
     border-style: groove;
