--- a/archive/scratchpad/v3_projects/studio-gallery_complete/css/setup.css
+++ b/archive/scratchpad/v3_projects/studio-gallery_complete/css/setup.css
@@ -1,15 +1,3 @@
-/*
-    NOTE TO STUDENTS: DON'T MODIFY THE CODE IN THIS FILE!
-
-    If you do, you risk messing up the template!
-    However, feel free to look at the CSS Properties used.
-
-    Some of them are relatively advanced, but you are encouraged
-    to do your own research to try to understand how they work.
-
-    If you get stuck, feel free to ask about them in office hours!
-*/
-
 body {
     display: flex;
     justify-content: center;
@@ -21,7 +9,7 @@ body {
 .scene {
     width: 600px;
     height: 300px;
-    perspective: 500px;
+    perspective: 500px; /* 500px */
 }
 
 .gallery {
@@ -40,7 +28,8 @@ body {
     border: 3px solid #666666;
     background: 
         radial-gradient(#00000011, #00000088),
-        20% center/50% url("../images/white-brick-wall.avif");
+        20% center/50% url("../images/white-brick-wall.avif")
+        ;
 }
 
 .ceiling {
