--- a/cookbook/meal-prep/generic-license/css/style.css
+++ b/cookbook/meal-prep/generic-license/css/style.css
@@ -1,8 +1,12 @@
 /*
+    This is the code that the students start with.
+*/
+
+/*
     NOTE TO STUDENTS: 
 
     This is the file you should be writing your CSS in 
-    for the assignment.
+    for the Generic License assignment.
 
     Good luck, and have fun!
 */
