fixes and additions
added transform property
added w3schools and mdn references
added in other border-styles
fixed missing dog images

--- a/cookbook/seasonings/css/border.css
+++ b/cookbook/seasonings/css/border.css
@@ -13,6 +13,26 @@
     height: 50px;
 }
 
+.border-style-inset {
+    border: 10px inset darkcyan;
+    height: 50px;
+}
+
+.border-style-outset {
+    border: 10px outset darkcyan;
+    height: 50px;
+}
+
+.border-style-groove {
+    border: 10px groove darkcyan;
+    height: 50px;
+}
+
+.border-style-ridge {
+    border: 10px ridge darkcyan;
+    height: 50px;
+}
+
 #combined-1 {
     border: 10px solid coral;
 }
