--- a/cookbook/seasonings/css/shared.css
+++ b/cookbook/seasonings/css/shared.css
@@ -12,3 +12,23 @@ body {
     margin: 0px;
     margin-bottom: 12px;
 }
+
+.resources {
+    border: 5px solid #1a3159;
+    border-width: 5px 0px 0px 0px;
+    padding: 12px 0px 24px;
+    margin-top: 24px;
+}
+
+.resources a {
+    color: #ff7050;
+    display: inline-block;
+    font-size: 24px;
+    text-decoration: none;
+    margin-bottom: 24px;
+    margin-left: 24px;
+}
+
+.resources a:hover {
+    text-decoration: underline;
+}
