--- a/cookbook/css/cookbook.css
+++ b/cookbook/css/cookbook.css
@@ -213,9 +213,18 @@ nav {
     transition: box-shadow 0.3s, transform 0.3s;
 }
 
+.recipeCards.cookbookWithLinks .cookbookRecipe {
+    cursor: default;
+}
+
 .recipeCards .cookbookRecipe:hover {
     box-shadow: 8px 8px 8px #00000033;
     transform: translateY(-8px);
+}
+
+.recipeCards.cookbookWithLinks .cookbookRecipe:hover {
+    box-shadow: 4px 4px 4px #00000033;
+    transform: none;
 }
 
 .recipeCards .recipeHeading {
@@ -240,6 +249,13 @@ nav {
     width: 100%;
 }
 
+.recipeCards .recipePreview img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top center;
+}
+
 .recipeCards iframe {
     height: 100%;
     width: 100%;
@@ -252,7 +268,6 @@ nav {
 
 .recipeCards .recipeOverlay {
     background: linear-gradient(to top, white 5%, transparent 20%, transparent);
-    border-radius: 0px 12px 12px;
     height: 100%;
     position: absolute;
     top: 0px;
