--- a/cookbook/css/cookbook.css
+++ b/cookbook/css/cookbook.css
@@ -54,21 +54,20 @@ nav {
     margin-left: 36px;
 }
 
-#topHeader #navLinks h2 {
-    margin-right: 24px;
+#topHeader h2 {
+    margin: 0px;
 }
 
-#topHeader #navLinks h2:last-child {
+#topHeader #navLinks .dropdown-menu:last-child {
     margin-right: 36px;
 }
 
 #topHeader a {
+    background-color: #1a3159;
     color: white;
     text-decoration: none;
-}
-
-#topHeader a:hover {
-    text-decoration: underline;
+    display: inline-block;
+    padding: 14px;
 }
 
 #topHeader #quote {
@@ -78,6 +77,61 @@ nav {
 
 #topHeader #navLinks {
     display: flex;
+}
+
+.dropdown-menu {
+    position: relative;
+}
+
+#navLinks > h2,
+.dropdown-menu .dropdown-trigger {
+    position: relative;
+    z-index: 100;
+}
+
+.dropdown-menu .dropdown-items {
+    position: absolute;
+    text-align: left;
+    left: 0px;
+    top: 75%;
+    visibility: hidden;
+    opacity: 0;
+    transition: 
+        top 0.25s,
+        visibility 0.25s,
+        opacity 0.25s;
+    z-index: 10;
+}
+
+.dropdown-menu:last-child .dropdown-items {
+    text-align: right;
+    left: auto;
+    right: 0px;
+}
+
+.dropdown-menu:hover .dropdown-items {
+    top: 100%;
+    visibility: visible;
+    opacity: 1;
+}
+
+#topHeader #navLinks .dropdown-items h2 {
+    margin: 0px;
+}
+
+#topHeader #navLinks .dropdown-items h2 a {
+    background-color: #1a3159;
+    color: white;
+    display: inline-block;
+    padding: 18px 14px;
+    width: 100%;
+}
+
+#topHeader a:hover,
+#topHeader .dropdown-menu:hover .dropdown-trigger a,
+#topHeader #navLinks .dropdown-items h2 a:hover {
+    background-color: white;
+    color: #1a3159;
 }
 
 #bottomHeader {
@@ -253,7 +307,7 @@ nav {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: top center;
+    object-position: top left;
 }
 
 .recipeCards iframe {
@@ -578,7 +632,7 @@ nav {
 
 @media screen and (min-width: 840px) and (max-width: 1400px) {
     #title {
-        padding: 12px 0px 4px;
+        padding: 12px 36px 4px;
     }
     #title h1 {
         font-size: 36px;
@@ -632,12 +686,28 @@ nav {
         margin-left: 0px;
     }
 
-    #topHeader #navLinks h2:last-child {
+    #topHeader #navLinks .dropdown-menu:last-child,
+    #topHeader #navLinks .dropdown-menu:last-child h2 {
         margin-right: 0px;
     }
 
+    #topHeader a {
+        padding: 8px 16px;
+    }
+
+    #topHeader #navLinks i {
+        display: none;
+    }
+
+    .dropdown-menu:hover .dropdown-items {
+        top: 100%;
+        visibility: hidden;
+        opacity: 0;
+        display: none;
+    }
+
     #title {
-        padding: 12px 0px 4px;
+        padding: 12px 24px 4px;
     }
 
     #title h1 {
