--- a/cookbook/css/cookbook.css
+++ b/cookbook/css/cookbook.css
@@ -636,6 +636,7 @@ nav {
     #title {
         padding: 12px 36px 4px;
     }
+
     #title h1 {
         font-size: 36px;
     }
@@ -656,7 +657,7 @@ nav {
 
     #quote {
         font-size: 12px;
-        padding: 0px 24px;
+        padding: 0px 0px;
     }
 
     #bottomHeader {
@@ -670,6 +671,12 @@ nav {
 
     .recipeCards .recipePreview {
         height: 250px;
+    }
+}
+
+@media screen and (min-width: 840px) and (max-width: 920px) {
+    #topHeader h2 {
+        font-size: 16px;
     }
 }
 
@@ -758,6 +765,10 @@ nav {
         border-radius: 24px;
         margin: 18px;
         padding: 24px 0px;
+    }
+
+    #meal-prep .dropdown-menu.meal-prep-filter {
+        display: none;
     }
 
     #cookbookPage.recipeCards {
