--- a/cookbook/recipes/two-columns-sidebar-grid/css/common-left.css
+++ b/cookbook/recipes/two-columns-sidebar-grid/css/common-left.css
@@ -23,7 +23,7 @@ body {
     with a couple tweaks to the main content as well.
 
     Note that most of the code is identical to the
-    example of a sidebar with two columns using grid.
+    example of a sidebar with two columns using flex.
 
     For many layouts, either grid or flex implementations
     can be used; it usually depends on what you're
@@ -37,12 +37,14 @@ body {
 */
 
 #two-columns {
-    display: flex;
+    display: grid;
+    grid-template-columns: 250px 1fr;
 }
 
 #sidebar-content {
     background-color: #EFEFEF;
     width: 250px;
+    min-width: 200px;
     padding: 24px;
     border-right: 2px solid #AAAAAA;
 }
