--- a/archive/scratchpad/v3_drills/week2/box-model-margin-drills_complex/css/drill.css
+++ b/archive/scratchpad/v3_drills/week2/box-model-margin-drills_complex/css/drill.css
@@ -17,3 +17,12 @@
 
 
 /* Drill 7 - Write your code solution below */
+
+
+/* Drill 8 - Write your code solution below */
+
+
+/* Drill 9 - Write your code solution below */
+
+
+/* Drill 10 - Write your code solution below */
