--- a/archive/scratchpad/v3_drills/week2/box-model-margin-drills_complex_complete/css/drill.css
+++ b/archive/scratchpad/v3_drills/week2/box-model-margin-drills_complex_complete/css/drill.css
@@ -1,8 +1,3 @@
-/*
-    Here are the complete solutions for all 
-    drills for Box Model - Margin.
-*/
-
 /* Drill 1 - Write your code solution below */
 #d1-div1 {
     margin-bottom: 24px;
@@ -26,7 +21,7 @@
 /* Drill 5 - Write your code solution below */
 
 #d5-div1 {
-    text-align: center;
+    text-align: center
 }
 
 #d5-h5-1 {
@@ -53,4 +48,34 @@
 
 .d7-div {
     margin: 12px 24px;
+}
+
+/* Drill 8 - Write your code solution below */
+#d8-div1 {
+    margin: 12px auto;
+}
+
+/* Drill 9 - Write your code solution below */
+#d9-div1 {
+    width: 250px;
+    margin: 0px auto;
+}
+
+/* Drill 10 - Write your code solution below */
+#d10-navbar-1 {
+    text-align: center;
+}
+
+.d10-navitem {
+    display: inline-block;
+    margin: 0px 16px;
+}
+
+#d10-div1 {
+    width: 250px;
+    margin: 0px auto;
+}
+
+#d10-h3-1 {
+    text-align: center;
 }
