--- a/cookbook/meal-prep/box-model-margin-drills_old/css/drill.css
+++ b/cookbook/meal-prep/box-model-margin-drills_old/css/drill.css
@@ -54,3 +54,33 @@
 .d7-div {
     margin: 12px 24px;
 }
+
+/* Drill 8 - Write your code solution below */
+#d8-div1 {
+    margin: 12px auto;
+}
+
+/* Drill 9 - Write your code solution below */
+#d9-div1 {
+    width: 250px;
+    margin: 0px auto;
+}
+
+/* Drill 10 - Write your code solution below */
+#d10-navbar-1 {
+    text-align: center;
+}
+
+.d10-navitem {
+    display: inline-block;
+    margin: 0px 16px;
+}
+
+#d10-div1 {
+    width: 250px;
+    margin: 0px auto;
+}
+
+#d10-h3-1 {
+    text-align: center;
+}
