--- a/cookbook/meal-prep/box-model-margin-drills_old/css/drill_page0.css
+++ b/cookbook/meal-prep/box-model-margin-drills_old/css/drill_page0.css
@@ -30,3 +30,12 @@
 
 
 /* Drill 7 - Write your code solution below */
+
+
+/* Drill 8 - Write your code solution below */
+
+
+/* Drill 9 - Write your code solution below */
+
+
+/* Drill 10 - Write your code solution below */
