three column layout grid (and 2col improvement)

--- a/cookbook/meal-prep/two-column-grid-layouts/css/page6.css
+++ b/cookbook/meal-prep/two-column-grid-layouts/css/page6.css
@@ -129,6 +129,14 @@ body {
     It's looking pretty clean! And much
     more interesting than we had before.
 
+    Btw, try adding another h2/ul combination
+    beneath our existing one in the HTML.
+
+    Due to how we styled them, we can 
+    continue to add additional chunks of
+    content inside the sidebar, just like
+    in the Domino's example! Neat!
+
     Now, let's just clean up the rest of
     the page.
 */
