flexbox drills instructor demo

--- a/cookbook/meal-prep/flexbox-drills/css/drill.css
+++ b/cookbook/meal-prep/flexbox-drills/css/drill.css
@@ -1,3 +1,8 @@
+/*
+    These are the complete solutions for all
+    of the drills in this drill set.
+*/
+
 /* Drill 1 - Write your code solution below */
 #container-1 {
     display: flex;
