--- a/cookbook/meal-prep/flexbox-drills/css/drill_page0.css
+++ b/cookbook/meal-prep/flexbox-drills/css/drill_page0.css
@@ -18,7 +18,7 @@
     elements are containers and which are items.
 
     There are only a few properties (and values) 
-    that students need to master here to succeed.
+    that students need to know here to succeed.
 
     Feel free to review them before starting.
 
