--- a/cookbook/meal-prep/cards-and-buttons/css/page0.css
+++ b/cookbook/meal-prep/cards-and-buttons/css/page0.css
@@ -1,38 +1,76 @@
 /*
-    Let's start by clearing out some of the default styles and changing our box-sizing to a more accurate method.
+    In this demo, we're going to show how we can 
+    create a card layout, which is simply a way of
+    grouping content together in a small presentable
+    package.
+
+    Typically, a card will have at a bare minimum
+    text content, but oftentimes you'll see an image
+    and a button in there as well.
+
+    We're going to build a set of cards that include
+    images, a title and copy text, and a call-to-action
+    (CTA) button.
+
+    We'll take a brief detour in the middle of the demo
+    to show you how to style an anchor element and
+    transform it into a more traditional button,
+    and then we'll wrap up our card styling.
+*/
+
+/*
+    First, let's jump to our HTML and get our main
+    column setup to hold our card content.
+
+    Come back here when you're done.
+*/
+
+/*
+    Let's start our CSS by using our normal page layout 
+    setup code, first by changing our box-sizing to a 
+    more common method, and then by strippin the margin
+    off the body element and setting a default copy text 
+    font family.
     
-    The asterisk (*) selector is the universal selector meaning it can be used to select any and all types of elements in the html.
+    As a reminder, the asterisk (*) selector is the 
+    universal selector (also known as the wildcard
+    selector), which will select ALL elements in the html.
 */
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
+}
+
 /*
-    Let's target our main element and give it a width of 90vw so that it repsonsively resizes with the viewport, a max-width of 800px so that for larger screens it doesn't look awkward and finally a margin with 0 top/bottom and auto left/right to center our main element.
+    Let's target our main element and give it a width of 
+    90vw so that it repsonsively resizes with the viewport,
+    a max-width of 800px so that for larger screens it 
+    doesn't look awkward and finally a margin with 48px 
+    top/bottom and 'auto' left/right to center our 
+    main element.
+
+    We'll also turn it into a flexbox container, so
+    that we can take advantage of justify-content: center;
+    which works well for when we want to center more
+    than just text.
 */
-main {
+#main {
     width: 90vw;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 48px auto;
+    display: flex;
+    justify-content: center;
 }
+
 /*
-    Let's also align our h3 in the center and give it some top and bottom margin for some better spacing.
+    Let's also align our h3 in the center and give it some 
+    top and bottom margin for some better spacing.
 */
 h3 {
     text-align: center;
     margin: 24px 0;
-}
-
-/*
-    Let's start setting up our two column layout. By applying a display of flex to the section, we turn it into a flex-container and anything we place inside it will become a flex-child. We can now use flex properties to manipulate it's children.
-
-    The first property we'll add is flex-wrap with a value of wrap so that our flex-children wrap appropriately when there is not more spacing for them on a row.
-
-    Then, let's add a justify-content: center; declaration to center our cards within their container. We'll working on the spacing between them later on.
-*/
-#two-column {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
 }
