--- a/cookbook/meal-prep/cards-and-buttons/css/page10.css
+++ b/cookbook/meal-prep/cards-and-buttons/css/page10.css
@@ -1,61 +1,73 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
-main {
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
+}
+
+/*
+    First, add two additional cards in the HTML,
+    and then come back here.
+
+    The problem of our smooshed content is 
+    because flexbox by default always tries to
+    keep everything on the same row.  It keeps
+    squeezing out every bit of space it can
+    to get everything to fit.
+
+    To fix that, we can add one last flexbox
+    property.  Can you guess?
+
+    (Ask the class)
+
+    The answer is: flex-wrap!
+*/
+#main {
     width: 90vw;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 48px auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
+
+/*
+    Now everything looks lovely.  Well done!
+*/
+
 h3 {
     text-align: center;
     margin: 24px 0;
 }
 
-#two-column {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
 .card {
-    margin: 0 25px 25px 0;
-    width: calc(50% - 25px);
+    margin: 24px;
+    width: 350px;
     border: 1.5px solid #ffe4da;
     border-radius: 5px;
     padding: 10px;
     box-shadow: -3px 3px 10px #ddd;
     background: linear-gradient(-50deg, #ffdbdb,#fff7f7, #ffc9c9);
 }
-/*
-    There's a few ways we can fix our previous issue above but we're going to utilize the nth-of-type pseudo-class for our fix.
 
-    We'll first target our .card and the attach a :nth-of-type() to it without any spaces. In the parenthesis, we want to target each even card and remove the right margin from it. To do that, we can put 2n or even inside the parenthesis. 2n means every second card and even means every even card. They're not always interchangeable as the number value before the n can be any number, even or odd.
-
-    Now, let's add a margin-right property and set it's value to 0px.
-
-    Now our cards no longer have unequal spacing on their outer edges. Let's head to the html and add some more cards now.
-*/
-.card:nth-of-type(2n) {
-    margin-right: 0px;
-}
 .card img {
     width: 100%;
     height: 150px;
     object-fit: cover;
 }
+
 .card h2 {
     font-size: 36px;
-    margin-top: 10px;
-}
-.card p {
-    font-family: sans-serif;
-    font-size: 18px;
-    margin: 15px 0;
+    margin-top: 12px;
 }
 
-.anchor-btn {
+.card p {
+    font-size: 18px;
+}
+
+.anchor-button {
     display: block;
     background-color: lightcoral;
     color: black;
@@ -69,7 +81,8 @@ h3 {
         background-color .5s,
         color .5s;
 }
-.anchor-btn:hover {
+
+.anchor-button:hover {
     background-color: transparent;
     color: lightcoral;
 }
