--- a/cookbook/meal-prep/cards-and-buttons/css/page3.css
+++ b/cookbook/meal-prep/cards-and-buttons/css/page3.css
@@ -1,52 +1,67 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
-main {
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
+}
+
+#main {
     width: 90vw;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 48px auto;
+    display: flex;
+    justify-content: center;
 }
+
 h3 {
     text-align: center;
     margin: 24px 0;
 }
 
-#two-column {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.card {
+    width: 350px;
 }
 
-.card {
-    width: 50%;
-}
 .card img {
     width: 100%;
     height: 150px;
     object-fit: cover;
 }
+
 .card h2 {
     font-size: 36px;
-    margin-top: 10px;
+    margin-top: 12px;
 }
+
 .card p {
-    font-family: sans-serif;
     font-size: 18px;
-    margin: 15px 0;
 }
 
 /*
-    Now let's make our anchor element stand out more and look like a button.
+    Now let's make our anchor element stand out more 
+    and look like a button.
 
-    We'll target the .anchor-btn class and give it a display of block to have it strecth 100% of it's containers width. Alternatively, if you can use inline-block if you don't wish to have it stretch,
+    We'll target the .anchor-button class and give it 
+    a display of block to have it strecth 100% of 
+    its container's width. 
+    
+    Alternatively, if you don't wish to have it stretch,
+    to the full width, you can also use inline-block
+    instead, and set it to whatever width you prefer.
 
-    Then let's stylize it by giving it a background-color, color, removing the text-decoration, giving it a bold font-weight and font-size of 20px.
+    Then let's stylize it by giving it a background-color, 
+    color, removing the text-decoration, giving it a 
+    font-weight of 'bold' and a font-size of 20px.
 
-    Then, let's fix it's alignment by having the text align center and giving some padding to add some spacing on the top and bottom of the content. We can also add spacing on the left/right of the content to give it a minimum size.
+    Then, let's fix it's alignment by having the text-align 
+    set to center and giving some padding to add some spacing 
+    on the top and bottom of the content. We can also add 
+    padding on the left/right of the content to give it a 
+    minimum size.
 */
-.anchor-btn {
+.anchor-button {
     display: block;
     background-color: lightcoral;
     color: black;
@@ -58,5 +73,17 @@ h3 {
 }
 
 /*
-    Now technically, our first card is done! However, let's make our anchor element a bit more interactive and also make our card look more aesthetically pleasing.
+    Now technically, our first card is done! 
+
+    We have a very basic card layout with an image,
+    title, content, and a call-to-action (CTA) button.
+
+    However, at the moment, our card content doesn't 
+    actually look much like a card...and our button
+    doesn't really behave much like a buttton...
+    
+    So let's see how we can make  our fake button a 
+    bit more interactive, and then we'll see how
+    we can style our card to actually look a bit more
+    like a card.
 */
