--- a/cookbook/meal-prep/cards-and-buttons/css/page7.css
+++ b/cookbook/meal-prep/cards-and-buttons/css/page7.css
@@ -1,59 +1,93 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
-main {
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
+}
+
+#main {
     width: 90vw;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 48px auto;
+    display: flex;
+    justify-content: center;
 }
+
 h3 {
     text-align: center;
     margin: 24px 0;
 }
 
-#two-column {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
 .card {
-    width: 50%;
-    border: 1.5px solid #ffe4da;
+    width: 350px;
+    border: 2px solid #ffe4da;
     border-radius: 5px;
     padding: 10px;
-    box-shadow: -3px 3px 10px #ddd;
+    box-shadow: -4px 4px 12px #ddd;
     /*
-        Now, let's also add a nice, subtle gradient to it to make it appear as if it has a shiny texture.
+        Now, let's also add a nice, subtle gradient 
+        to it to make it appear as if it has a shiny 
+        texture.
 
-        We're going to be using the background property and the linear-gradient value for this.
+        We're going to be using the background property 
+        and the linear-gradient value for this.
 
-        The background property is a shorthand CSS property that sets all background style properties at once, such as color, image, origin and size, or repeat method. This is how we create images with overlays on them as well.
+        The background property is a shorthand CSS 
+        property that can set all sorts of background
+        related properties.
 
-        The linear-gradient is a css function that creates an 'image' consisting of a progressive transition between two or more colors along a straight line. In otherwords, it makes a linear gradient. 
+        The linear-gradient is a css function that creates 
+        an 'image' consisting of a progressive transition 
+        between two or more colors along a straight line. 
+        In otherwords, it makes a linear gradient. 
 
-        There are a few different types of values for the different kinds of gradients you can make with this function but for this demo, we're going to make a Color Stop gradient using 1 degree value and 3 color values like below within the parenthesis.
+        The syntax for linear-gradients looks a little
+        weird: you specify the function name (linear-gradient)
+        followed by open/close parentheses.
+
+        Then inside of the open/close parentheses, you 
+        specify the inputs to the function, similar to 
+        how you specify the values of normal CSS Properties.
+
+        The most basic type of linear gradient is two
+        color values separated by a comma.  If you want
+        additional colors, you can add them, as long as
+        you separate them with commas.
+
+        However, you can also specify a direction as the 
+        first input to the linear-gradient function; this 
+        will tell the function in what direction you want
+        the color change to start and where you want it
+        to go. This direction can be in degrees, or using 
+        directional keywords like "to top left" or "to bottom".
+
+        In this example, we're going to use degrees to 
+        specify the direction of the gradient, along
+        with three color values (in hex, though any valid
+        CSS color value could work).
     */
-    background: linear-gradient(-50deg, #ffdbdb,#fff7f7, #ffc9c9);
+    background: 
+        linear-gradient(-50deg, #ffdbdb,#fff7f7, #ffc9c9);
 }
+
 .card img {
     width: 100%;
     height: 150px;
     object-fit: cover;
 }
+
 .card h2 {
     font-size: 36px;
-    margin-top: 10px;
-}
-.card p {
-    font-family: sans-serif;
-    font-size: 18px;
-    margin: 15px 0;
+    margin-top: 12px;
 }
 
-.anchor-btn {
+.card p {
+    font-size: 18px;
+}
+
+.anchor-button {
     display: block;
     background-color: lightcoral;
     color: black;
@@ -67,7 +101,8 @@ h3 {
         background-color .5s,
         color .5s;
 }
-.anchor-btn:hover {
+
+.anchor-button:hover {
     background-color: transparent;
     color: lightcoral;
 }
