--- a/cookbook/meal-prep/cards-and-buttons/css/page8.css
+++ b/cookbook/meal-prep/cards-and-buttons/css/page8.css
@@ -1,50 +1,56 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
-main {
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
+}
+
+#main {
     width: 90vw;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 48px auto;
+    display: flex;
+    justify-content: center;
 }
+
 h3 {
     text-align: center;
     margin: 24px 0;
 }
 
-#two-column {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
 /*
-    Now, I think our first card is fully fleshed out. Let's move to our html and create some additional ones!
+    Now our first card is fully fleshed out. 
+    Let's move to our html and create some 
+    additional ones!
 */
 .card {
-    width: 50%;
-    border: 1.5px solid #ffe4da;
+    width: 350px;
+    border: 2px solid #ffe4da;
     border-radius: 5px;
     padding: 10px;
-    box-shadow: -3px 3px 10px #ddd;
-    background: linear-gradient(-50deg, #ffdbdb,#fff7f7, #ffc9c9);
+    box-shadow: -4px 4px 12px #ddd;
+    background: 
+        linear-gradient(-50deg, #ffdbdb,#fff7f7, #ffc9c9);
 }
+
 .card img {
     width: 100%;
     height: 150px;
     object-fit: cover;
 }
+
 .card h2 {
     font-size: 36px;
-    margin-top: 10px;
-}
-.card p {
-    font-family: sans-serif;
-    font-size: 18px;
-    margin: 15px 0;
+    margin-top: 12px;
 }
 
-.anchor-btn {
+.card p {
+    font-size: 18px;
+}
+
+.anchor-button {
     display: block;
     background-color: lightcoral;
     color: black;
@@ -58,7 +64,8 @@ h3 {
         background-color .5s,
         color .5s;
 }
-.anchor-btn:hover {
+
+.anchor-button:hover {
     background-color: transparent;
     color: lightcoral;
 }
