--- a/cookbook/recipes/gallery-masonry-vertical-flex/css/page2.css
+++ b/cookbook/recipes/gallery-masonry-vertical-flex/css/page2.css
@@ -19,10 +19,10 @@ body {
 /* 
     Gallery setup 
 */
-.horizontal-masonry-gallery {
+.vertical-masonry-gallery {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    
     /*
         The gap property will add space between
         our Flexbox Items, similar to margin,
@@ -30,10 +30,10 @@ body {
         rather than the Item level.
     */
     gap: 24px;
+
+    max-height: 1100px;
 }
 
-.horizontal-masonry-gallery img {
-    height: 250px;
-    flex: 1;
-    object-fit: cover;
+.vertical-masonry-gallery img {
+    width: 33.33%;
 }
