--- a/cookbook/recipes/gallery-masonry-vertical-flex/css/page3.css
+++ b/cookbook/recipes/gallery-masonry-vertical-flex/css/page3.css
@@ -19,14 +19,14 @@ body {
 /* 
     Gallery setup 
 */
-.horizontal-masonry-gallery {
+.vertical-masonry-gallery {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 24px;
+    max-height: 1100px;
 }
 
-.horizontal-masonry-gallery img {
-    height: 250px;
-    flex: 1;
-    object-fit: cover;
+.vertical-masonry-gallery img {
+    width: 33.33%;
 }
